// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ThemeScript should apply ThemeScript 1`] = `
"<div>
  <script>
    (function (){var d=document.documentElement,k='__DF_THEME_SELECTED__',q='(prefers-color-scheme:dark)';function r(){var t=null;try{t=localStorage.getItem(k)}catch(e){}if(!t){try{if(true&&window.matchMedia(q).matches)t='dark'}catch(e){}}d.setAttribute('data-theme',t||"default")}r();try{window.addEventListener('storage',function(e){if(e.key===k||e.key===null)r()})}catch(e){}if(true)try{window.matchMedia(q).addEventListener('change',r)}catch(e){}})()
  </script>
</div>"
`;

exports[`ThemeScript should apply ThemeScript with theme 1`] = `
"<div>
  <script>
    (function (){document.documentElement.setAttribute('data-theme',"default");}())
  </script>
</div>"
`;

exports[`ThemeScript should apply ThemeScript with not auto 1`] = `
"<div>
  <script>
    (function (){var d=document.documentElement,k='__DF_THEME_SELECTED__',q='(prefers-color-scheme:dark)';function r(){var t=null;try{t=localStorage.getItem(k)}catch(e){}if(!t){try{if(false&&window.matchMedia(q).matches)t='dark'}catch(e){}}d.setAttribute('data-theme',t||"default")}r();try{window.addEventListener('storage',function(e){if(e.key===k||e.key===null)r()})}catch(e){}if(false)try{window.matchMedia(q).addEventListener('change',r)}catch(e){}})()
  </script>
</div>"
`;
